fixed font for posts to be more readable. complete #2

--- a/css/renge.css
+++ b/css/renge.css
@@ -28,3 +28,6 @@
 .content{
   margin-top: -2em;
 }
+p{
+  font-size: 18px;
+}
